<resources>
    <string name="app_name">Category App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">search</string>
    <string name="category_name">Category name</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="add_customer">Add customer</string>
    <string name="sync">Sync</string>
    <string name="clear_ticket">Clear ticket</string>
    <string name="sales">Sales</string>
    <string name="receipts">Receipts</string>
    <string name="items">Items</string>
    <string name="settings">Settings</string>
    <string name="back_office">Back office</string>
    <string name="apps">Apps</string>
    <string name="help">Help</string>
    <string name="owner">Owner</string>
    <string name="pos_1">POS 1</string>
    <string name="gntnk">GNTNK</string>
</resources>