<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_sales"
            android:title="@string/sales" />
        <item
            android:id="@+id/nav_receipts"
            android:icon="@drawable/ic_receipt"
            android:title="@string/receipts" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_items"
            android:title="@string/items" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_back_office"
                android:icon="@drawable/ic_back_office"
                android:title="@string/back_office" />
            <item
                android:id="@+id/nav_apps"
                android:icon="@drawable/ic_shop"
                android:title="@string/apps" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help" />
        </menu>
    </item>
</menu>