<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/add_customer"
        android:icon="@drawable/ic_person"
        android:layout_marginRight="100dp"
        android:title="@string/add_customer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/more_menu"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/clear_ticket"
                android:icon="@drawable/ic_delete"
                app:showAsAction="ifRoom"
                android:title="@string/clear_ticket" />

            <item
                android:id="@+id/sync"
                android:icon="@drawable/ic_sync"
                app:showAsAction="ifRoom"
                android:title="@string/sync" />
        </menu>


    </item>
</menu>